force-app/main/default/objects/Krow__Project_Settings__c/Krow__Project_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Project Configuration on My Project</description>
    <label>Project Settings</label>
</CustomObject>