force-app/main/default/objects/Krow__Project_Settings__c/fields/Krow__Disable_Account_Filter__c.field-meta.xml
<CustomField>
    <fullName>Krow__Disable_Account_Filter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, it will disable the &amp;quot;Account filter on the My Project AND My Work tab, and also make the Account Column VIEW ONLY on My Project list view</description>
    <inlineHelpText>If checked, it will disable the &amp;quot;Account filter on the My Project AND My Work tab, and also make the Account Column VIEW ONLY on My Project list view</inlineHelpText>
    <label>Disable Account Filter</label>
    <type>Checkbox</type>
</CustomField>