force-app/main/default/objects/Krow__Project_Settings__c/fields/Krow__Disable_Activity__c.field-meta.xml
<CustomField>
    <fullName>Krow__Disable_Activity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If It is checked, it will disable for the user from the Project page.</description>
    <inlineHelpText>If It is checked, it will disable for the user from the Project page.</inlineHelpText>
    <label>Disable Activity</label>
    <type>Checkbox</type>
</CustomField>