force-app/main/default/objects/Krow__Project_Settings__c/fields/Krow__Disable_Archive_Projects_Filter__c.field-meta.xml
<CustomField>
    <fullName>Krow__Disable_Archive_Projects_Filter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Archive Projects Filter</label>
    <type>Checkbox</type>
</CustomField>