force-app/main/default/objects/Krow__Project_Settings__c/fields/Krow__Disable_Filter_By_Owner__c.field-meta.xml
<CustomField>
    <fullName>Krow__Disable_Filter_By_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Filter By Owner</label>
    <type>Checkbox</type>
</CustomField>