force-app/main/default/objects/Krow__Project_Settings__c/fields/Krow__Disable_New_Project_Role_Match__c.field-meta.xml
<CustomField>
    <fullName>Krow__Disable_New_Project_Role_Match__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Disable New Project Role Match</label>
    <type>Checkbox</type>
</CustomField>