force-app/main/default/objects/Krow__Project_Settings__c/fields/Krow__Disable_Project_Task_Views__c.field-meta.xml
<CustomField>
    <fullName>Krow__Disable_Project_Task_Views__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, it will disable the new Task picklist on the Project Task Page (e.g. Task Information, Task Progress, Milestone Information).</description>
    <inlineHelpText>If checked, it will disable the new Task picklist on the Project Task Page (e.g. Task Information, Task Progress, Milestone Information).</inlineHelpText>
    <label>Disable Project Task Views</label>
    <type>Checkbox</type>
</CustomField>