force-app/main/default/objects/Krow__Project_Settings__c/fields/Krow__Disable_Project_Template_Creation__c.field-meta.xml
<CustomField>
    <fullName>Krow__Disable_Project_Template_Creation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, the user would NOT see the fields &quot;Project Template&quot;, &quot;Public Project Template&quot; or Task Template&quot;</description>
    <inlineHelpText>If checked, the user would NOT see the fields &quot;Project Template&quot;, &quot;Public Project Template&quot; or Task Template&quot;</inlineHelpText>
    <label>Disable Project Template Creation</label>
    <type>Checkbox</type>
</CustomField>