force-app/main/default/objects/Krow__Project_Settings__c/fields/Krow__Disable_Task_Planner__c.field-meta.xml
<CustomField>
    <fullName>Krow__Disable_Task_Planner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked then hide task planner link(Menu) on my project.</description>
    <inlineHelpText>If checked then hide task planner link(Menu) on my project.</inlineHelpText>
    <label>Disable Task Planner</label>
    <type>Checkbox</type>
</CustomField>