force-app/main/default/objects/Krow__Project_Settings__c/fields/Krow__Disable_Timeline__c.field-meta.xml
<CustomField>
    <fullName>Krow__Disable_Timeline__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If Disable Timeline is checked, it will disable for the user from the Project page.</description>
    <inlineHelpText>If Disable Timeline is checked, it will disable for the user from the Project page.</inlineHelpText>
    <label>Disable Timeline</label>
    <type>Checkbox</type>
</CustomField>