force-app/main/default/objects/Krow__Project_Settings__c/fields/Krow__Display_Charts__c.field-meta.xml
<CustomField>
    <fullName>Krow__Display_Charts__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This setting is uses to display Chart on Project Status Report.</description>
    <inlineHelpText>This setting is uses to display Chart on Project Status Report.</inlineHelpText>
    <label>Display Charts</label>
    <type>Checkbox</type>
</CustomField>