force-app/main/default/objects/Krow__Project_Settings__c/fields/Krow__Display_Current_Week_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Krow__Display_Current_Week_Tasks__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If checked, It show current Tasks In Project Status Report and it&apos;s Pdf.</description>
    <inlineHelpText>If checked, It show current Tasks In Project Status Report and it&apos;s Pdf.</inlineHelpText>
    <label>Display Current Week Tasks</label>
    <type>Checkbox</type>
</CustomField>