force-app/main/default/objects/Krow__Project_Settings__c/fields/Krow__Display_Issues__c.field-meta.xml
<CustomField>
    <fullName>Krow__Display_Issues__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If Checked , it shows the issues related to Project.</description>
    <inlineHelpText>If Checked , it shows the issues related to Project.</inlineHelpText>
    <label>Display Issues</label>
    <type>Checkbox</type>
</CustomField>