force-app/main/default/objects/Krow__Project_Settings__c/fields/Krow__Display_Last_Week_Task__c.field-meta.xml
<CustomField>
    <fullName>Krow__Display_Last_Week_Task__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If Checked , it shows the last week Tasks on Project Status Report .</description>
    <inlineHelpText>If Checked , it shows the last week Tasks on Project Status Report .</inlineHelpText>
    <label>Display Last Week Task</label>
    <type>Checkbox</type>
</CustomField>