force-app/main/default/objects/Krow__Project_Settings__c/fields/Krow__Display_Milestones__c.field-meta.xml
<CustomField>
    <fullName>Krow__Display_Milestones__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If Checked , it shows the milestone Tasks on Project Status Report.</description>
    <inlineHelpText>If Checked , it shows the milestone Tasks on Project Status Report.</inlineHelpText>
    <label>Display Milestones</label>
    <type>Checkbox</type>
</CustomField>