force-app/main/default/objects/Krow__Project_Settings__c/fields/Krow__Display_Next_Week_Task__c.field-meta.xml
<CustomField>
    <fullName>Krow__Display_Next_Week_Task__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If Checked , it shows the next week Tasks on Project Status Report.</description>
    <inlineHelpText>If Checked , it shows the next week Tasks on Project Status Report.</inlineHelpText>
    <label>Display Next Week Task</label>
    <type>Checkbox</type>
</CustomField>