force-app/main/default/objects/Krow__Project_Settings__c/fields/Krow__Display_Risks__c.field-meta.xml
<CustomField>
    <fullName>Krow__Display_Risks__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If Checked , it shows the risk related to Project in Project Status Report.</description>
    <inlineHelpText>If Checked , it shows the risk related to Project in Project Status Report.</inlineHelpText>
    <label>Display Risks</label>
    <type>Checkbox</type>
</CustomField>