force-app/main/default/objects/Krow__Project_Settings__c/fields/Krow__External_Site_Url__c.field-meta.xml
<CustomField>
    <fullName>Krow__External_Site_Url__c</fullName>
    <description>Site URL for the project&apos;s &quot;External Site&quot; field</description>
    <inlineHelpText>Site URL for the project&apos;s &quot;External Site&quot; field</inlineHelpText>
    <label>External Site URL</label>
    <type>Url</type>
</CustomField>