force-app/main/default/objects/Krow__Project_Settings__c/fields/Krow__Site_Url__c.field-meta.xml
<CustomField>
    <fullName>Krow__Site_Url__c</fullName>
    <description>Full Site Url starts with https for Project Status Report on the project</description>
    <inlineHelpText>Site Url for Project Status Report</inlineHelpText>
    <label>Site Url</label>
    <type>Url</type>
</CustomField>